[gd_scene load_steps=9 format=2]

[ext_resource path="res://PortalLVL1.gd" type="Script" id=1]
[ext_resource path="res://levels/PortalModel.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/TextGeneric.tres" type="DynamicFont" id=3]
[ext_resource path="res://PortalParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Cocola.ttf" type="DynamicFontData" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.08687, 2.0689, 0.219128 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 5.97594, 1.65427, 6.15184 )

[sub_resource type="DynamicFont" id=3]
size = 43
font_data = ExtResource( 5 )

[node name="PortalLVL1" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.624263, 0, 0 )
shape = SubResource( 1 )

[node name="Portal2" parent="." instance=ExtResource( 2 )]
transform = Transform( -2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, -0.928666, -0.790985, 0 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.463429, 0, 0 )
shape = SubResource( 2 )

[node name="Particles" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.607644, 0.635718, 0 )
emitting = false

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -408.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
visible = false
margin_left = 539.0
margin_top = 127.0
margin_right = 740.0
margin_bottom = 185.0
custom_fonts/font = ExtResource( 3 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -287.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer2"]
visible = false
margin_left = 640.0
margin_top = 195.0
margin_right = 640.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_PortalLVL1_body_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
